compiler/test/parse-err/div-trop-real-unsupported.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func DivTropRealUnsupported(
    // expected-note@below{{operands have semiring trop_real}}
    a: trop_real, b: trop_real) -> trop_real {
    // Division is not supported for trop_real semiring (only real and trop_int)
    // expected-error@below{{division is only supported for real semiring}}
    return a / b;
}
